--- a/src/Styles/LoadingScreen.css
+++ b/src/Styles/LoadingScreen.css
@@ -13,3 +13,15 @@
     font-weight: 600;
     text-align: center;
 }
+
+@media only screen and (max-device-width: 700px){
+    .loading-sub-text {
+        font-size: 1rem;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .loading-gif {
+        width: 80%;
+    }
+}
